<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>hbnu.project</groupId>
        <artifactId>zhiyan-ai</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>zhiyan-ai-dify</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>zhiyan-ai-dify</name>
    <description>zhiyan-ai-dify</description>


    <properties>
        <java.version>21</java.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>

        <!-- Nacos Discovery -->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
        </dependency>

        <!-- Nacos Config -->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
        </dependency>

        <!-- JSON Processing -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>

        <!-- Feign 客户端依赖 -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-openfeign</artifactId>
        </dependency>

        <!-- LoadBalancer 负载均衡器（Feign 必需） -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
        </dependency>

        <!-- Validation API -->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>

        <!-- 公共模块 -->
        <dependency>
            <groupId>hbnu.project</groupId>
            <artifactId>zhiyan-common-basic</artifactId>
        </dependency>

        <dependency>
            <groupId>hbnu.project</groupId>
            <artifactId>zhiyan-common-log</artifactId>
        </dependency>

        <dependency>
            <groupId>hbnu.project</groupId>
            <artifactId>zhiyan-common-security</artifactId>
        </dependency>

        <dependency>
            <groupId>hbnu.project</groupId>
            <artifactId>zhiyan-common-sse</artifactId>
        </dependency>

<!--        &lt;!&ndash; Redis 模块（用于缓存对话历史） &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>hbnu.project</groupId>-->
<!--            <artifactId>zhiyan-common-redis</artifactId>-->
<!--        </dependency>-->

        <!-- Spring Boot Starter Web（提供 MVC 支持） -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>


        <!-- Spring Boot Starter Web（提供 MVC 支持） -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
    </dependencies>

</project>
